small fixes for spacing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -98,6 +98,6 @@ hr {
 } 
 
 .imgprof{
-  padding-left: 190px;
-  padding-top: 50px;
+  padding-left: 200px;
+  padding-top: 35px;
 }
